force-app/main/default/objects/PF_Quality_Score__c/PF_Quality_Score__c.object-meta.xml
<CustomObject>
    <description>Quality assessment scores for generated prompt output across multiple dimensions</description>
    <label>Prompt Factory Quality Score</label>
    <nameField>
        <displayFormat>PFQS-{00000000}</displayFormat>
        <label>Quality Score Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prompt Factory Quality Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>