force-app/main/default/objects/PF_Quality_Score__c/fields/Actionability__c.field-meta.xml
<CustomField>
    <fullName>Actionability__c</fullName>
    <description>Usefulness and actionability score (1-10)</description>
    <label>Actionability</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>