force-app/main/default/objects/PF_Quality_Score__c/fields/AI_Feedback__c.field-meta.xml
<CustomField>
    <fullName>AI_Feedback__c</fullName>
    <description>AI-generated feedback and recommendations for improvement</description>
    <label>AI Feedback</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>