force-app/main/default/objects/PF_Quality_Score__c/fields/Business_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Value__c</fullName>
    <description>Business value and goal alignment score (1-10)</description>
    <label>Business Value</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>