force-app/main/default/objects/PF_Quality_Score__c/fields/Data_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Data_Accuracy__c</fullName>
    <description>Data relevance and accuracy score (1-10)</description>
    <label>Data Accuracy</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>