force-app/main/default/objects/PF_Quality_Score__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <description>Average score across all quality dimensions</description>
    <formula>(Visual_Quality__c + Data_Accuracy__c + Persona_Fit__c + Actionability__c + Business_Value__c) / 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>