force-app/main/default/objects/PF_Quality_Score__c/fields/Pass_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Pass_Threshold__c</fullName>
    <defaultValue>7.0</defaultValue>
    <description>Minimum score required to pass quality check</description>
    <label>Pass Threshold</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>