force-app/main/default/objects/PF_Quality_Score__c/fields/Passed__c.field-meta.xml
<CustomField>
    <fullName>Passed__c</fullName>
    <description>Indicates whether the overall score meets or exceeds the pass threshold</description>
    <formula>Overall_Score__c &gt;= Pass_Threshold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passed</label>
    <type>Checkbox</type>
</CustomField>