force-app/main/default/objects/PF_Quality_Score__c/fields/Persona_Fit__c.field-meta.xml
<CustomField>
    <fullName>Persona_Fit__c</fullName>
    <description>Appropriateness for target user persona score (1-10)</description>
    <label>Persona Fit</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>