force-app/main/default/objects/PF_Quality_Score__c/fields/Run__c.field-meta.xml
<CustomField>
    <fullName>Run__c</fullName>
    <description>Master-Detail relationship to the parent Prompt Factory Run</description>
    <label>Run</label>
    <referenceTo>PF_Run__c</referenceTo>
    <relationshipLabel>Quality Scores</relationshipLabel>
    <relationshipName>Quality_Scores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>