force-app/main/default/objects/PF_Quality_Score__c/fields/Visual_Quality__c.field-meta.xml
<CustomField>
    <fullName>Visual_Quality__c</fullName>
    <description>Visual formatting and readability score (1-10)</description>
    <label>Visual Quality</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>