force-app/main/default/objects/PF_Quality_Score__c/validationRules/Actionability_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Actionability_Range</fullName>
    <active>true</active>
    <description>Ensures Actionability score is between 1 and 10</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Actionability__c)),
    OR(
        Actionability__c &lt; 1,
        Actionability__c &gt; 10
    )
)</errorConditionFormula>
    <errorDisplayField>Actionability__c</errorDisplayField>
    <errorMessage>Actionability score must be between 1 and 10</errorMessage>
</ValidationRule>