force-app/main/default/objects/PF_Quality_Score__c/validationRules/Pass_Threshold_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Pass_Threshold_Range</fullName>
    <active>true</active>
    <description>Ensures Pass Threshold is between 1 and 10</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Pass_Threshold__c)),
    OR(
        Pass_Threshold__c &lt; 1,
        Pass_Threshold__c &gt; 10
    )
)</errorConditionFormula>
    <errorDisplayField>Pass_Threshold__c</errorDisplayField>
    <errorMessage>Pass Threshold must be between 1 and 10</errorMessage>
</ValidationRule>