force-app/main/default/objects/PF_Quality_Score__c/validationRules/Visual_Quality_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Visual_Quality_Range</fullName>
    <active>true</active>
    <description>Ensures Visual Quality score is between 1 and 10</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Visual_Quality__c)),
    OR(
        Visual_Quality__c &lt; 1,
        Visual_Quality__c &gt; 10
    )
)</errorConditionFormula>
    <errorDisplayField>Visual_Quality__c</errorDisplayField>
    <errorMessage>Visual Quality score must be between 1 and 10</errorMessage>
</ValidationRule>